# RunScore

./: .gitignore  PRD.md  README.md  main.py  manage.py  pyproject.toml  requirements.txt
core/: asgi.py  settings.py  urls.py  wsgi.py
dashboard/: tests.py  views.py
strava_integration/: models.py  services.py  tests.py  urls.py  views.py
strava_integration/migrations/: 0001_initial.py
templates/: base.html
templates/dashboard/: index.html
templates/users/: login.html  register.html
users/: firebase_auth.py  forms.py  models.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_user_name.py  0003_user_firebase_uid_alter_user_phone_number.py
