[project]
name = "runscore"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "celery>=5.5.3",
    "dj-database-url>=3.0.1",
    "django>=4.2.26",
    "djangorestframework>=3.16.1",
    "firebase-admin>=7.1.0",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.1",
    "redis>=7.0.1",
    "requests>=2.32.5",
    "whitenoise>=6.11.0",
]
